--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/webp" href="/logo_putih.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMP MBG - Kawal Program Makan Bergizi Gratis</title>
     <meta name="description" content="Platform independen untuk mengawal Program Makan Bergizi Gratis di Indonesia" />
@@ -11,10 +11,15 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZ9hjp-Ek-_EeA.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="https://fonts.gstatic.com/s/poppins/v22/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2" as="font" type="font/woff2" crossorigin />
     <!-- Preload critical assets -->
-    <link rel="preload" href="/images/logo_putih.png" as="image" />
-    <link rel="preload" href="/images/siswa_makan_mbg_1.png" as="image" media="(min-width: 1024px)" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link rel="preload" href="/logo_putih.webp" as="image" />
+    <link rel="preload" href="/siswa_makan_mbg_1.webp" as="image" media="(min-width: 1024px)" fetchpriority="high" />
+    <!-- Non-blocking font stylesheet -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet" /></noscript>
   </head>
   <body>
     <div id="root"></div>
