fix(dashboard): enable editing and saving report credibility level

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/logo_putih.webp" />
+    <link rel="icon" type="image/webp" href="/logo_hijau_kecil.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMP MBG - Kawal Program Makan Bergizi Gratis</title>
     <meta name="description" content="Platform independen untuk mengawal Program Makan Bergizi Gratis di Indonesia" />
