fix: improve SEO keyword coverage

--- a/apps/frontend-public/index.html
+++ b/apps/frontend-public/index.html
@@ -6,29 +6,29 @@
     <link rel="apple-touch-icon" href="/logo_hijau.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1B4D98" />
-    <title>AMP MBG - Kawal Program Makan Bergizi Gratis</title>
-    <meta name="description" content="Platform independen untuk mengawal Program Makan Bergizi Gratis di Indonesia" />
+    <title>Lapor MBG - Kawal Program Makan Bergizi Gratis | AMP MBG</title>
+    <meta name="description" content="Lapor MBG - Platform independen oleh AMP MBG untuk melaporkan dan mengawal pelaksanaan Program Makan Bergizi Gratis di seluruh Indonesia. Transparan, akuntabel, partisipatif." />
     <link rel="canonical" href="https://lapormbg.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="AMP MBG" />
+    <meta property="og:site_name" content="Lapor MBG - AMP MBG" />
     <meta property="og:locale" content="id_ID" />
-    <meta property="og:title" content="AMP MBG - Kawal Program Makan Bergizi Gratis" />
-    <meta property="og:description" content="Platform independen untuk mengawal Program Makan Bergizi Gratis di Indonesia" />
+    <meta property="og:title" content="Lapor MBG - Kawal Program Makan Bergizi Gratis | AMP MBG" />
+    <meta property="og:description" content="Lapor MBG - Platform independen oleh AMP MBG untuk melaporkan dan mengawal pelaksanaan Program Makan Bergizi Gratis di seluruh Indonesia." />
     <meta property="og:image" content="https://lapormbg.com/logo_hijau.webp" />
     <meta property="og:url" content="https://lapormbg.com/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="AMP MBG - Kawal Program Makan Bergizi Gratis" />
-    <meta name="twitter:description" content="Platform independen untuk mengawal Program Makan Bergizi Gratis di Indonesia" />
+    <meta name="twitter:title" content="Lapor MBG - Kawal Program Makan Bergizi Gratis | AMP MBG" />
+    <meta name="twitter:description" content="Lapor MBG - Platform independen oleh AMP MBG untuk melaporkan dan mengawal pelaksanaan Program Makan Bergizi Gratis di seluruh Indonesia." />
     <meta name="twitter:image" content="https://lapormbg.com/logo_hijau.webp" />
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "AMP MBG",
-      "alternateName": "Asosiasi Masyarakat Pelaku Makan Bergizi Gratis",
+      "name": "Lapor MBG - AMP MBG",
+      "alternateName": ["AMP MBG", "Asosiasi Masyarakat Pelaku Makan Bergizi Gratis", "Lapor MBG"],
       "url": "https://lapormbg.com",
       "logo": "https://lapormbg.com/logo_hijau.webp",
-      "description": "Platform independen untuk mengawal transparansi Program Makan Bergizi Gratis di Indonesia.",
+      "description": "Lapor MBG - Platform independen oleh AMP MBG untuk melaporkan dan mengawal transparansi Program Makan Bergizi Gratis di Indonesia.",
       "foundingDate": "2025",
       "areaServed": { "@type": "Country", "name": "Indonesia" }
     }
